Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40225

SVG icons not displayed in the menubar on macOS

XMLWordPrintable

    • macOS
    • d8857f21ac2640215177b9cb7bb681b74bc66068

      Actions in the main menu do not display svg icons. Instead the place reserved for the icon is empty (see screenshot). png icons are displayed correctly.
      The same action works correctly on the toolbar: svg as well as png icons are displayed.

      This issue is macOS specific. Works correctly on windows and linux.

      Please find attached a minimal example program illustrating the behavior (tested with Qt 5.3.0 and macOS 10.9.3).

        1. Bildschirmfoto 2014-07-14 um 12.38.44.png
          50 kB
          Tim Hoffmann
        2. menuicontest.zip
          11 kB
          Tim Hoffmann
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            andysh Andy Shaw
            thoffmann Tim Hoffmann
            Votes:
            4 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes